[FIX] added missing style for better readability of presets

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,13 +216,23 @@ input[type="radio"]:checked + label, button:active {
 	content: "\f54c";
 }
 
+#presetsContainer {
+    line-height: 1;
+    min-height: 60px;
+}
+
 .preset-item {
-	margin-top: 5px;
-	margin-bottom: 5px;
+    float: left;
+    position: relative;
+    margin: 0px 30px 10px 0;
 }
 
 .remove-preset {
 	margin-left: 10px;
+	position: absolute;
+    top: 0;
+    right: -16px;
+    font-size: 16px;
 }
 
 ul {
